# OpenEnv_hackathon

./: Dockerfile  README.md  help.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_output.txt
cloud_sre_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py  environment.py  index.html  models.py  rubrics.py  simulator.py
tasks/: __init__.py  task1.py  task2.py  task3.py  task4.py  task5.py
